--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -573,16 +573,16 @@ Cross fusion aims to bridge the semantic gap between two modalities by using the
 \paragraph{Hybrid Fusion}
 We may leverage the advantages of the previous three types of fusion techniques by combining them once more in a hybrid setting. As described in \cite{AtreyHEK10,yu2014informedia}, the main idea is to simultaneously combine features at the feature level, i.e., early fusion, and at the same semantic space or decision level. Nonetheless, they define a specific type of hybrid fusion. In this chapter, we adopt a looser definition of hybrid fusion. That is, we perform a hybrid combination of features by leveraging the aggregation of the fusion strategies described before. 
 
-Having said that, here we distinguish three levels of hybrid fusion that we employ in our experiments during the Chapter \ref{chap:wsd}. 
+Having said that, here we distinguish three levels of hybrid fusion (aside from the use of single features, or SF henceforth, independently) that we employ in our experiments during the Chapter \ref{chap:wsd}. 
 
  \begin{enumerate}
-\item \textbf{First Degree Fusion}: we  consider the  three elementary fusion techniques described before (early fusion, late fusion, cross fusion) by themselves.  This level of fusion serve as the baseline we set to surpass in order to show the efficacy of the representation feature space found through fusion techniques.
+\item \textbf{First Degree Fusion (1F)}: we  consider the  three elementary fusion techniques described before (early fusion, late fusion, cross fusion) by themselves.  This level of fusion serve as the baseline we set to surpass in order to show the efficacy of the representation feature space found through fusion techniques.
 As an example, we may obtain a first degree representation matrix by performing an early fusion between the lexical matrix and the syntactical features matrix: $E(M^{L}, M^{S})$. 
 
-We note that we distinguish two types of cross fusion operators: \textbf{Cross Feature Fusion} ($X_F$) and \textbf{Cross Similarity Fusion} ($X_S$). The former combines a similarity matrix with a feature matrix, e.g., $X(\slex, \msyn)$. The latter joins a similarity matrix with another similarity matrix, for example $X(\ssyn, \slex)$. %Indeed, $X_S$ has the same configuration as the cross fusion presented before. We rename it to distinguish against the $X_F$ configuration. 
+We note that we distinguish two types of cross fusion operators: \textbf{Cross Feature Fusion} ($X_F$) and \textbf{Cross Similarity Fusion} ($X_S$). The former combines a similarity matrix with a feature matrix, e.g., $X_F(\slex, \msyn)$. The latter joins a similarity matrix with another similarity matrix, for example $X_S(\ssyn, \slex)$. %Indeed, $X_S$ has the same configuration as the cross fusion presented before. We rename it to distinguish against the $X_F$ configuration. 
 The intuition behind cross feature fusion $X_F$ is that the rich information from the first input matrix can be transferred directly to a representation without the need of obtaining its similarity matrix beforehand. We denote them \textit{feature} and \textit{similarity} to refer to the fact that the first one uses simply a feature matrix and the second requires some knowledge from the data, in this case the similarity between terms.
 
-\item \textbf{Second Degree Fusion}: in this level we  begin with the recombination of the outputs of the previous two levels. Namely, this procedure  yields a combination of "second-degree" among fusion methods. Indeed, we introduce four types of second degree fusions employed in the following list. Each one is illustrated with an example:
+\item \textbf{Second Degree Fusion (2F)}: in this level we  begin with the recombination of the outputs of the previous two levels. Namely, this procedure  yields a combination of "second-degree" among fusion methods. Indeed, we introduce four types of second degree fusions employed in the following list. Each one is illustrated with an example:
 
 
 \begin{enumerate}
@@ -600,9 +600,9 @@ The intuition behind cross feature fusion $X_F$ is that the rich information fro
 \end{enumerate}
 
 % A second-degree fusion would be an early fusion of the lexical feature matrix with a cross fusion, expressed as $E(M^{L}, \allowbreak X(S^{T}, M^{T}))$.   
-\item \textbf{Higher-Degree Fusion}: in this last level we follow a similar approach to the previous level by combining the output of the second-degree fusion level multiple times (that is, more than two times) with other second-degree fusion outputs. In this level we test the following two fusion operations:
+\item \textbf{Higher-Degree Fusion (HF)}: in this last level we follow a similar approach to the previous level by combining the output of the second-degree fusion level multiple times (that is, more than two times) with other second-degree fusion outputs. In this level we test the following two fusion operations:
 \begin{enumerate}
-\item \textbf{Early Late Cross Feature Fusion} ($ELX_FF$): As an example for this fusion, the operation $E(\mstd, \allowbreak L(\msyn, X_F(\sstd, \mstd)))$ implies the combination of three fusion operations. From left to right, first we compute the early fusion (first operation) of  matrix $\mstd$, with the result of a late fusion (second operation) between feature matrix $msyn$ and the result of a cross feature fusion, itself having as input matrices $\sstd$ and $\mstd$. Indeed, we perform three operations, an early fusion, a late fusion and a cross feature fusion, thus the name Early Late cross feature fusion of this operator.
+\item \textbf{Early Late Cross Feature Fusion} ($ELX_FF$): As an example for this fusion, the operation $E(\mstd, \allowbreak L(\msyn, X_F(\sstd, \mstd)))$ implies the combination of three fusion operations. From left to right, first we compute the early fusion (first operation) of  matrix $\mstd$, with the result of a late fusion (second operation) between feature matrix $\msyn$ and the result of a cross feature fusion, itself having as input matrices $\sstd$ and $\mstd$. Indeed, we perform three operations, an early fusion, a late fusion and a cross feature fusion, thus the name Early Late cross feature fusion of this operator.
 \item \textbf{Triple Early Double Late Cross Feature Fusion\footnote{We adopted the \textit{double} and \textit{triple} notation to lighten the explicit name of this fusion operation: Early Early Early Late Cross Feature Late Cross Feature Fusion}}
 %Early Early Early Late Cross Feature Late Cross Feature Fusion
  ($EEELX_FLX_F$): althoug it seems complex, this fusion scheme merely consists on the early fusion of the last two operators: $LX_FF$ and $ELX_FF$, with another feature matrix. As an example, the operator  $E(\mlex, E(E(\mstd,  L(\mstd, X_F(\sstd, \mstd))),\allowbreak L(\mlex, X_F(\ssyn, \mlex))))$ entails the early fusion of matrix $\mlex$ with the result of the early fusion of $ELX_FF$ with $LX_FF$.
