--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1572,7 +1572,7 @@ publisher = "Wiley-Blackwell",
   booktitle = {Proceedings of the 5th International Workshop on Semantic Evaluation},
   pages     = {63--68},
   publisher = {Association for Computational Linguistics},
-  year     = {2010-07},
+  year     = {2010},
   location  = {Uppsala, Sweden},
   url       = {http://www.aclweb.org/anthology/S10-1011},
 }
