--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -25,7 +25,7 @@
 \noindent \Large sous la direction de Sabine \textsc{Loudcher} et Julien \textsc{Ah-Pine} \\
 
 \vspace*{0.2cm}
-\noindent \large Soutenue publiquement le 19 Janvier  2018 devant le jury~:\\
+\noindent \large Soutenue publiquement le  devant le jury~:\\
 \vspace*{0.1cm}
 \end{center}
 \noindent \large \textbf{Jury :} \\
